--- a/template/home.html
+++ b/template/home.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/login"   method="post">
-hyyyyyyyyyyyyyyyyyyyyyyyyyyy
-    </form>
-    
+    hello here 
 </body>
 </html>
