--- a/template/login.html
+++ b/template/login.html
@@ -6,8 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/login"   method="post">
-hyyyyyyyyyyyyyyyyyyyyyyyyyyy
+    <form action="/Loginreq"   method="post">
+
+        <input type="text" name="username" placeholder="username">
+        <input type="email" name="email" placeholder="email">
+
+        <input type="password" name="firstpassword" placeholder="password">
+
+        <input type="password" name="password" placeholder="password">
+        <button type="submit">Login</button>
+        <a href="/Registerreq">Register</a>
+        <a href="/Home">Home</a>
     </form>
     
 </body>
