--- a/template/login.html
+++ b/template/login.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+
+    {{if . }}
+<p  style="color: red;">{{.}}</p>
+    {{end}}
+    
     <form action="/Loginreq"   method="post">
 
         <input type="text" name="username" placeholder="username">
@@ -15,7 +20,7 @@
 
         <input type="password" name="password" placeholder="password">
         <button type="submit">Login</button>
-        <a href="/Registerreq">Register</a>
+        <a href="/register">Register</a>
         <a href="/Home">Home</a>
     </form>
     
