--- a/template/login.html
+++ b/template/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>loginn</title>
 </head>
 <body>
 
@@ -14,10 +14,8 @@
     <form action="/Loginreq"   method="post">
 
         <input type="text" name="username" placeholder="username">
-        <input type="email" name="email" placeholder="email">
 
-        <input type="password" name="firstpassword" placeholder="password">
-
+       
         <input type="password" name="password" placeholder="password">
         <button type="submit">Login</button>
         <a href="/register">Register</a>
