--- a/template/home.html
+++ b/template/home.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    hello here 
+<form action="/logout"  method="post">
+<input type="submit" name="submit" value="logout ">
+</form>
+
+
+
 </body>
 </html>
