--- a/template/login.html
+++ b/template/login.html
@@ -4,23 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>loginn</title>
+    <link rel="stylesheet" href="/static/login.css">
 </head>
 <body>
 
-    {{if . }}
-<p  style="color: red;">{{.}}</p>
-    {{end}}
-    
-    <form action="/Loginreq"   method="post">
 
-        <input type="text" name="username" placeholder="username">
+    <div class="main-container centered-flex">
+        <div class="form-container">
+            <div class="icon fa fa-user"></div>
+            <form class="centered-flex" action="/loginAuth" method="post">
+                <div class="title">LOGIN</div>
+                <div class="msg"></div>
+                <div class="field">
+                    <input type="text" placeholder="Username" id="uname" name="username">
+                    <span class="fa fa-user"></span>
+                </div>
+                <div class="field">
+                    <input type="password" placeholder="Password" id="pass" name="password">
+                    <span class="fa fa-lock"></span>
+                </div>
+                <div class="action centered-flex">
+                    <label for="remember" class="centered-flex">
+                        <input type="checkbox" id="remember"> Remember me
+                    </label>
+                </div>
+                {{if . }}
+                <div class="error">
+                  
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" height="24" fill="none"><path fill="#393a37" d="m13 13h-2v-6h2zm0 4h-2v-2h2zm-1-15c-1.3132 0-2.61358.25866-3.82683.7612-1.21326.50255-2.31565 1.23915-3.24424 2.16773-1.87536 1.87537-2.92893 4.41891-2.92893 7.07107 0 2.6522 1.05357 5.1957 2.92893 7.0711.92859.9286 2.03098 1.6651 3.24424 2.1677 1.21325.5025 2.51363.7612 3.82683.7612 2.6522 0 5.1957-1.0536 7.0711-2.9289 1.8753-1.8754 2.9289-4.4189 2.9289-7.0711 0-1.3132-.2587-2.61358-.7612-3.82683-.5026-1.21326-1.2391-2.31565-2.1677-3.24424-.9286-.92858-2.031-1.66518-3.2443-2.16773-1.2132-.50254-2.5136-.7612-3.8268-.7612z"></path></svg>
+                    <div class="error__title">{{.}}</div>
+                </div>
+                
+                {{end}}
 
-       
-        <input type="password" name="password" placeholder="password">
-        <button type="submit">Login</button>
-        <a href="/register">Register</a>
-        <a href="/Home">Home</a>
-    </form>
-    
+                <div class="btn-container">
+                    <input type="submit" id="login-btn" value="Login">
+                </div>
+                <div class="signup">Don't have an Account?<a href="/registerAuth"> Sign up</a></div>
+            </form>
+        </div>
+</div>
+
 </body>
 </html>
