--- a/template/register.html
+++ b/template/register.html
@@ -11,7 +11,7 @@
 <p  style="color: red;">{{.}}</p>
     {{end}}
     
-    <form action="/Registerreq"   method="post">
+    <form action="/RegisterAuth"   method="post">
 
         <input type="text" name="username" placeholder="username" >
         <input type="email" name="email" placeholder="email">
