--- a/template/login.html
+++ b/template/login.html
@@ -40,7 +40,7 @@
                 <div class="btn-container">
                     <input type="submit" id="login-btn" value="Login">
                 </div>
-                <div class="signup">Don't have an Account?<a href="/registerAuth"> Sign up</a></div>
+                <div class="signup">Don't have an Account?<a href="/register"> Sign up</a></div>
             </form>
         </div>
 </div>
