--- a/static/home.css
+++ b/static/home.css
@@ -32,3 +32,13 @@ a{
     min-width: 50%;
     text-decoration: none;
 }
+
+
+.post{
+    display: flex;
+    gap: 2%;
+    flex-wrap: wrap;
+    align-content: start;
+    align-items: center;
+  border: 0 black;
+}
