--- a/static/home.css
+++ b/static/home.css
@@ -1,44 +1,52 @@
-.container {
-    display: flex;
-    gap: 2%;
-    flex-wrap: wrap;
-    align-content: start;
-  }
-  
-  .item:nth-child(1),
-  .item:nth-child(4) {
-    width: 100%;
-    height: 5%;
-  }
-  
-  .item:nth-child(2) {
-    width: 25%;
-    height: 75%;
-  }
-  
-  .item:nth-child(3) {
-    flex-grow: 1;
-    height: 75%;
-  }
-#one{
-    display: flex;
-    gap: 2%;
-    flex-wrap: wrap;
-    align-content: start;
-    align-items: center;
+body{
+  height: 1vh;
 }
 
-a{
-    min-width: 50%;
-    text-decoration: none;
-}
 
+.header{
+  background-color: #f8f9fa;
+  padding: 20px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  text-align: center;
+}
+.header h1{
+  font-size: 2em;
+  margin: 0;
+}
+.header a{
+  text-decoration: none;
+  color: #000000;
+  font-size: 1.2em;
+}
+.header form input{
+  text-decoration: none;
+  color: #000000;
+  font-size: 1.2em;
+  background: none;
+  border: none;
+}
 
 .post{
-    display: flex;
-    gap: 2%;
-    flex-wrap: wrap;
-    align-content: start;
-    align-items: center;
-  border: 0 black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  border:  solid 1px #000000;
+  text-align: center;
+}
+
+.post h2{
+  font-size: 1.5em;
+  margin: 0;
+  text-align: center;
+}
+
+.post p{
+  font-size: 1.2em;
+  margin: 0;
+  text-align: center;
 }
