--- a/static/home.css
+++ b/static/home.css
@@ -50,3 +50,26 @@ body{
   margin: 0;
   text-align: center;
 }
+
+
+.commentshow{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  border: solid 1px #000000;
+  text-align: center;
+
+}
+.commentshow h2{
+  font-size: 1.5em;
+  margin: 0;
+  text-align: center;
+}
+.commentshow p{
+  font-size: 1.2em;
+  margin: 0;
+  text-align: center;
+}
+
