--- a/template/login.html
+++ b/template/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/static/fb.png" type="image/x-icon">
     <title>loginn</title>
     <link rel="stylesheet" href="/static/login.css">
 </head>
