--- a/template/home.html
+++ b/template/home.html
@@ -109,15 +109,20 @@
     {{if .Session }}
 
     <div class="postform">
+      <h2>Create Post</h2>
       <form action="/createPost" method="post">
         <input type="text" name="title" placeholder="Title" required /><br />
-        <textarea name="description" placeholder="Content" required></textarea
-        ><br />
+        <textarea name="description" placeholder="Content" required></textarea>
+        <br />
         <select name="categoryID" id="">
           <option value="1">GYM</option>
-          <option value="2">Football</option></select
-        ><br />
-
+          <option value="2">Football</option>
+          <option value="3">Music</option>
+          <option value="4">Food</option>
+          <option value="5">Sport</option>
+          <option value="6">Education</option>
+        </select>
+        <br />
         <input type="submit" value="Create Post" /><br />
       </form>
     </div>
