--- a/static/navbar.css
+++ b/static/navbar.css
@@ -1,6 +1,13 @@
+:root {
+  --wahd: #6537e0;
+  --joj: #090114;
+  --tlata:#6A2FC7;
+  --bg:#0a0a0a;
+  --bg2:#4b5aff;
+}
 header {
   animation: navbar 1.5s ease-in-out;
-  background-color: #0a0a0a;
+  background-color: var(--joj);
   z-index: 3;
   position: fixed;
   top: 0;
@@ -10,7 +17,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0px 1px 2px #4f75ff;
+  box-shadow: 0px 1px 2px var(--wahd);
 }
 header img {
   filter: brightness(150%);
@@ -35,7 +42,7 @@ header .title {
   font-size: 45px;
   font-weight: bold;
   color: transparent;
-  -webkit-text-stroke: 2px #4f75ff;
+  -webkit-text-stroke: 2px var(--wahd);
   font-family: Arial, sans-serif;
   text-decoration: none;
 }
@@ -45,10 +52,10 @@ header .title {
   display: flex;
   gap: 20px;
 }
-.gap input {
+.gap .postbtn {
   padding: 8px 20px;
   text-decoration: none;
-  background-color: #4f75ff;
+  background-color: var(--wahd);
   border-radius: 10px;
   color: white;
   font-size: 16px;
@@ -66,13 +73,13 @@ header .title {
 .login {
   padding: 7px 20px;
   text-decoration: none;
-  background-color: #4f75ff;
+  background-color: var(--wahd);
   border-radius: 10px;
   color: white;
   font-size: 18px;
 }
 
-header form input {
+header form .formlog {
   text-decoration: none;
   color: #000000;
   font-size: 1.2em;
