--- a/template/home.html
+++ b/template/home.html
@@ -93,8 +93,8 @@
       <h2 class="post-title">{{.Title}}</h2>
 
       <div class="post-tags">
-        {{range .Tags}}
-        <span class="tag">{{.}}</span>
+        {{range $.Categories}}
+        <span class="tag">{{.Name}}</span>
         {{end}}
       </div>
 
