--- a/template/home.html
+++ b/template/home.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Forum</title>
-  <link rel="shortcut icon" href="/static/meta.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="/static/images/meta.png" type="image/x-icon" />
   <link rel="stylesheet" href="/static/home.css" />
   <link rel="stylesheet" href="/static/navbar.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
