--- a/static/login.css
+++ b/static/login.css
@@ -1,222 +1,215 @@
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
 * {
-    font-family: Poppins, "Open Sans", sans-serif;
-    font-weight: bold;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body::-webkit-scrollbar {
-    display: none;
-  }
-  html {
-    scroll-behavior: smooth;
-  }
-body{
-background-image: url(back.jpg);}
+  font-family: Poppins, "Open Sans", sans-serif;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+html {
+  scroll-behavior: smooth;
+}
+body {
+  background-image: url("/static/images/back.jpg");
+}
 
 .main-container {
-    min-height: 100vh;
-    height: 400px;
-    font-family: 'calibri';
+  min-height: 100vh;
+  height: 400px;
+  font-family: "calibri";
 }
 
 .centered-flex {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .form-container {
-    width: 400px;
-    height: 480px;
-    display: grid;
-    position: relative;
+  width: 400px;
+  height: 480px;
+  display: grid;
+  position: relative;
 }
 
 .icon {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
-
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    width: 85px;
-    font-size: 50px;
-    display: grid;
-    height: 85px;
-    place-content: center;
-    border: 1px solid #2a2a2a;
-    z-index: 1;
-    justify-self: center;
-    border-radius: 50%;
-    background: #0e0e0e;
+  width: 85px;
+  font-size: 50px;
+  display: grid;
+  height: 85px;
+  place-content: center;
+  border: 1px solid #2a2a2a;
+  z-index: 1;
+  justify-self: center;
+  border-radius: 50%;
+  background: #0e0e0e;
 }
 
 .fa {
-    color: #a2a2a2;
+  color: #a2a2a2;
 }
 
 form {
-    flex-direction: column;
-    padding: 25px 25px 10px;
-    border-radius: 30px;
-    background: rgba(19, 19, 19, 0.736);
-    border: 1px solid rgba(255, 255, 255, 0.097);
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    height: 100%;
+  flex-direction: column;
+  padding: 25px 25px 10px;
+  border-radius: 30px;
+  background: rgba(19, 19, 19, 0.736);
+  border: 1px solid rgba(255, 255, 255, 0.097);
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  height: 100%;
 }
 
 .title {
-    position: relative;
-    margin: 40px 0;
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
+  position: relative;
+  margin: 40px 0;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
 }
 
 .msg {
-    color: #fa2929;
-    position: absolute;
-    top: 25%;
+  color: #fa2929;
+  position: absolute;
+  top: 25%;
 }
 
 .field {
-    display: flex;
-    position: relative;
-    width: 100%;
+  display: flex;
+  position: relative;
+  width: 100%;
 }
 
 .field .fa {
-    position: absolute;
-    font-size: 14px;
-    right: 10px;
-    bottom: 10px;
+  position: absolute;
+  font-size: 14px;
+  right: 10px;
+  bottom: 10px;
 }
 
 input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0 30px rgb(14 14 14) inset;
+  -webkit-box-shadow: 0 0 0 30px rgb(14 14 14) inset;
 }
 
 input:-webkit-autofill {
-    -webkit-text-fill-color: #bababa !important;
+  -webkit-text-fill-color: #bababa !important;
 }
 
 form input {
-    display: block;
-    outline: none;
-    width: 100%;
-    border: none;
-    font-size: 16px;
-    color: #d2d2d2;
-    margin: 25px 0 5px;
-    caret-color: #cccccc;
-    background: transparent;
-    padding: 10px 25px 3px 0;
-    border-bottom: 1px solid #404040;
+  display: block;
+  outline: none;
+  width: 100%;
+  border: none;
+  font-size: 16px;
+  color: #d2d2d2;
+  margin: 25px 0 5px;
+  caret-color: #cccccc;
+  background: transparent;
+  padding: 10px 25px 3px 0;
+  border-bottom: 1px solid #404040;
 }
 
 .action {
-    justify-content: space-between;
-    width: 100%;
-    font-size: 14px;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 14px;
 }
 
 .action label {
-    cursor: pointer;
-    color: #7d7d7d;
+  cursor: pointer;
+  color: #7d7d7d;
 }
 
 .action input {
-    width: auto;
-    margin: 0 8px 0 0;
-    cursor: pointer;
+  width: auto;
+  margin: 0 8px 0 0;
+  cursor: pointer;
 }
 
 a {
-    text-decoration: none;
-    color: #9b9b9b;
+  text-decoration: none;
+  color: #9b9b9b;
 }
 
 .btn-container {
-    padding: 20px;
-    transition: .2s linear;
+  padding: 20px;
+  transition: 0.2s linear;
 }
 
 #login-btn {
-    padding: 5px 20px;
-    border: none;
-    background: rgb(25, 62, 97);
-    color: white;
-    font-weight: 600;
-    font-size: 16px;
-    border-radius: 15px;
-    transition: .3s;
-    margin: auto
+  padding: 5px 20px;
+  border: none;
+  background: rgb(25, 62, 97);
+  color: white;
+  font-weight: 600;
+  font-size: 16px;
+  border-radius: 15px;
+  transition: 0.3s;
+  margin: auto;
 }
 
 #login-btn:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .signup {
-    color: rgb(70, 70, 70);
-    margin-top: 10px;
+  color: rgb(70, 70, 70);
+  margin-top: 10px;
 }
 
 .shift-left {
-    transform: translateX(-120%);
+  transform: translateX(-120%);
 }
 
 .shift-right {
-    transform: translateX(120%);
+  transform: translateX(120%);
 }
 
 .shift-top {
-    transform: translateY(-150%);
+  transform: translateY(-150%);
 }
 
 .shift-bottom {
-    transform: translateY(150%);
+  transform: translateY(150%);
 }
 
 .no-shift {
-    transform: translate(0%, 0%);
+  transform: translate(0%, 0%);
 }
 
-
-
-
-
-
 .error {
-    font-family: Arial;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    margin: auto;
-    margin-top: 15px;
-  }
-  
- 
-  .error__icon path {
-    fill: #fff;
-  }
-  
-  .error__title {
-    font-weight: bold;
-    font-size: 14px;
-    color: #777171;
-  }
-  
-  .error__icon {
-    width: 20px;
-    height: 20px;
-    position: relative;
-    top: -2px;
-  }
+  font-family: Arial;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  margin: auto;
+  margin-top: 15px;
+}
+
+.error__icon path {
+  fill: #fff;
+}
+
+.error__title {
+  font-weight: bold;
+  font-size: 14px;
+  color: #777171;
+}
+
+.error__icon {
+  width: 20px;
+  height: 20px;
+  position: relative;
+  top: -2px;
+}
