--- a/template/register.html
+++ b/template/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/static/register.css">
-    <link rel="shortcut icon" href="/static/fb.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/images/meta.png" type="image/x-icon">
 </head>
 <body>
     
